# RustBenchmark

./: LICENSE  README.md  data.json  docker-compose.yml
charts/: README.md
charts/clojure/: Chart.yaml  values.yaml
charts/clojure/templates/: NOTES.txt  deployment.yaml
charts/go/: Chart.yaml  values.yaml
charts/go/templates/: deployment.yaml
charts/groovy/: Chart.yaml  values.yaml
charts/groovy/templates/: deployment.yaml  serviceaccount.yaml
charts/python/: Chart.yaml  values.yaml
charts/python/templates/: deployment.yaml  ingress.yaml
charts/reactive-spring/: Chart.yaml  values.yaml
charts/reactive-spring/templates/: _helpers.tpl  deployment.yaml
charts/rust/: Chart.yaml  values.yaml
charts/rust/templates/: deployment.yaml  hpa.yaml
charts/spring/: values.yaml
charts/spring/templates/: service.yaml
clojure/: Dockerfile  README.md  project.clj
clojure/src/clojure_demo/: handler.clj
go/: .gitignore  Dockerfile  go.mod  go.sum
go/cmd/daemon/: README.md  main.go
groovy/: .gitignore  Dockerfile  pom.xml
java-spring/: Dockerfile  pom.xml
java-spring-reactive/: pom.xml
java-spring-reactive/src/main/java/com/example/javaspringreactive/: JavaSpringReactiveApplication.java
java-spring-reactive/src/main/resources/: application.yaml
java-spring/src/main/resources/: application.yaml
python/: Dockerfile  requirements.txt
python/app/: main.py
rust/: .dockerignore  .env  Cargo.toml  Dockerfile  sqlx-data.json
rust/migrations/2022-08-01-152138_init/: up.sql
rust/src/: main.rs
(+2 files in other folders)
