[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"
authors = ["Fistons <emercier@weborama.com>"]

[[bin]]
path = "src/main.rs"
name = "rust-demo"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # Async runtime
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "offline"] }
blake2b_simd = "1.0.0"
num_cpus = "1.13" # Number of CPU (no easy standard way to do it :( )
lapin = "2.1.1" # RabbitMQ
deadpool = { version = "0.9", features = ["rt_tokio_1"] }
base64 = "0.13"
axum = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
